# alvar_tag_tracking

Unity3D/CameraField/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  CameraField.sln
Unity3D/CameraField/Assets/: RosSharp
Unity3D/CameraField/Assets/Drone/: Quadrotor.prefab
Unity3D/CameraField/Assets/Drone/Materials/: MarkerData_0.mat
Unity3D/CameraField/Assets/Drone/Scripts/: DroneTwistSubscriber.cs
Unity3D/CameraField/Assets/Images/Materials/: check-108.mat
Unity3D/CameraField/Assets/Scenes/: Calibration.unity  CameraField.unity
Unity3D/CameraField/ProjectSettings/: EditorBuildSettings.asset
Unity3D/camera_field_Data/: globalgamemanagers  level0
Unity3D/drone_simulation_Data/: globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets.resS
alvar_tag_tracking/: CMakeLists.txt  package.xml  plugin.xml  setup.py
alvar_tag_tracking/include/rqt_calibration/: new_cam_dialog.hpp  rqt_calibration.hpp
alvar_tag_tracking/launch/: .calibration_gui.launch.swp  .unity_camera.launch.swp  calibration_gui.launch  rqt_calibration.launch  unity_camera.launch  usb_camera.launch
alvar_tag_tracking/scripts/: rqt_calibration
alvar_tag_tracking/share/calibration/unity/: .unity.yaml.swp  ost.txt  unity.yaml
alvar_tag_tracking/share/rviz/: config.rviz
alvar_tag_tracking/src/: average_tf.cpp  average_tools.hpp  calibration_client.cpp  calibration_server.cpp  camera_info_publisher.py  launcher.py  tf_prefixer.cpp
alvar_tag_tracking/src/rqt_calibration/: new_cam_dialog.cpp  new_cam_dialog.ui  rqt_calibration.cpp  rqt_calibration.ui
alvar_tag_tracking/srv/: LaunchFile.srv  calibration.srv
